--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,32 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/png" href="/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>PassOP - your own password manager</title>
+  <title>PassOP — Secure Password Manager</title>
+
+  <meta
+    name="description"
+    content="PassOP is a secure, privacy-first password manager that protects your digital life using strong encryption."
+  />
+
+  <meta name="robots" content="index, follow" />
+  <meta name="author" content="PassOP" />
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="PassOP — Secure Password Manager" />
+  <meta
+    property="og:description"
+    content="A secure password manager that keeps your passwords private and protected."
+  />
+  <meta property="og:type" content="website" />
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="PassOP — Secure Password Manager" />
+  <meta
+    name="twitter:description"
+    content="Protect your digital life with strong encryption and privacy-first design."
+  />
+
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
