Remove config from tracking

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -18,6 +18,7 @@
     <!-- Empty root: all UI is injected via Shadow DOM -->
     <div id="root"></div>
 
+    <script src="config.js"></script>
     <script src="popup.js"></script>
   </body>
 </html>
